--- a/styles.css
+++ b/styles.css
@@ -21,19 +21,29 @@ body, html {
     flex-direction:column; /* 修改主轴方向*/
     overflow-x: hidden; /* 隐藏水平滚动条并阻止水平滚动 */
     overflow-y: auto; /* 允许内容在垂直方向上滚动 */
+    border-radius: 20px;
+    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
 }
 
 .pad {
-    width: 1025px;
+    width: 860px;
     height: 812px;
     margin: 30px auto;
     background-color: #FFF;
-    /* background-color: aqua; */
     flex-direction:column; /* 修改主轴方向*/
+    align-items: center;
     overflow-x: hidden; /* 隐藏水平滚动条并阻止水平滚动 */
     overflow-y: auto; /* 允许内容在垂直方向上滚动 */
+    border-radius: 20px;
+    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
+
 }
+
 .phone::-webkit-scrollbar {
+    display: none; /* 隐藏滚动条 */
+  }
+
+  .pad::-webkit-scrollbar {
     display: none; /* 隐藏滚动条 */
   }
 
@@ -44,7 +54,7 @@ body, html {
     margin: 0 auto; /* 添加100px的顶部空白，并水平居中横幅 */
 }
 /* 科目 */
-.subject {
+.phone .subject {
     display: flex; /* 启用Flexbox布局 */
     justify-content: space-between; /* 子元素之间的空间平均分布 */
     padding: 0 16px;   /* 左右内边距为 16px */
@@ -53,11 +63,20 @@ body, html {
     width: 335px;
     gap: 11px;
 }
-.km { 
+.pad .subject {
+    display: flex; /* 启用Flexbox布局 */
+    justify-content: space-between; /* 子元素之间的空间平均分布 */
+    justify-content: center; /* 水平居中子元素 */
+    align-items: center;    /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
+    padding: 0 16px;   /* 左右内边距为 16px */
+    width: 780px;
+    gap: 11px;
+}
+
+.phone .km { 
     display: flex;
-    flex: 1;
     padding: 0.125rem 0rem var(--, 0.25rem) 0rem;
-    flex-direction: column;
+    flex-direction: column;  
     justify-content: center;
     align-items: center;
     width: 58.2px; /* 设置每个.km元素的宽度为100px */
@@ -66,6 +85,19 @@ body, html {
     padding: 0rem 0.125rem 0rem 0.25rem;
     border-radius: 0.375rem 0.375rem 0.75rem 0.375rem;
     }
+.pad .km { 
+    display: flex;
+    flex: 1;
+    padding: 0.125rem 0rem var(--, 0.25rem) 0rem;
+    justify-content: center;
+    align-items: center;
+    width: 58.2px; /* 设置每个.km元素的宽度为100px */
+    gap: 0.0625rem;
+    flex-shrink: 0;
+    padding: 0rem 0.125rem 0rem 0.25rem;
+    border-radius: 0.375rem 0.375rem 0.75rem 0.375rem;
+    }
+
 .km span {
     font-size: 12px;
     width: 1.82rem;
@@ -100,16 +132,16 @@ body, html {
 /* banner */
 .pad-banner-container {
     position: relative;
-    width: 100%;
-    width: 1025px; /*横幅的最大宽度 */
-    height: 323.69px; /* 背景图像的高度 */
+
+    width: 780px; /*横幅的最大宽度 */
+    height: 240px; /* 背景图像的高度 */
     margin: 0px auto 0; /* 添加100px的顶部空白，并水平居中横幅 */
 }
 
 .pad-background-image {
     position: absolute;
     width: 100%; /* 将背景图像的宽度设置为容器的100% */
-    height: 289.97px; /* Height of the background image */
+    height: 215px; /* Height of the background image */
     bottom: 0; /* 对齐图像的底部 */
     left: 50%; /* 将图像水平居中 */
     transform: translateX(-50%); /* 调整位置，使位置完全居中 */
@@ -118,7 +150,7 @@ body, html {
 }  
 .pad-foreground-image {
     position: absolute;
-    height: 323.69px;
+    height: 240px;
     width: 100%; /* 将前景图像的宽度设置为容器的100% */
     bottom: 0px; /* 将前景图像放置在背景图像上方40px */
     left: 50%; /* 将图像水平居中 */
@@ -147,23 +179,38 @@ body, html {
 }
 
 
-.miniBannerPhone {
+.phone .miniBanner {
     display: flex; /* 启用Flexbox布局 */
     margin-top: 1rem;
     padding-left: 16px;   /* 左内边距为 16px */
     gap: 8px;
 }
 
-.miniBanner {
+.phone .miniBanner img  {
     width: 162px;
     height: 91px;
 }
-
-.other{
-    width: 375px;
+.pad .miniBanner {
+    display: flex; /* 启用Flexbox布局 */
+    width: 780px;
+    gap: 12px;
+    margin: 20px  40px 0px 40px;
 }
 
-.other img {
+.pad .miniBanner img  {
+    width: 243px;
+}
+
+.phone .other img{
+    display: block;
+    margin: 0 auto;
     width: 335px;
-    margin-left: 16px;
-    }   
+
+}
+
+.pad .other img {
+    display: block;
+    margin: 0 auto;
+    width: 780px;
+
+}
