--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,90 @@ body, html {
     height: 100%;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
-.canvas {
+.page {
     display: flex;
-    justify-content: center; /* 弹性盒子沿主轴居中排列 */
-    flex-wrap: wrap;  /*弹性盒子挤压时可以换行 */
-    align-items: flex-start;
+    justify-content:space-between;
+    height: 100%;
+}
+
+.nav{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 260px;
+    height: 100%;
+    background-color: #fff;
+    border-right: 1px solid #E0DFDF;
+    padding: 0 20px;
+}
+
+.nav .heading {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%; 
+    width: 100%;
+    height: 60px;
+    border-bottom: 1px solid #F5F4F4;
+}
+
+.nav .content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+}
+
+.menu {
+    /* position: fixed;  */
+    /* right: 0;
+    top: 0;  */
+    display: flex;
+    width: 260px;
+    height: 100%;
+    padding: 0 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    flex-shrink: 0;
+    align-self: stretch;
+    border-top: 1px solid  #E0DFDF;
+    border-left: 1px solid #E0DFDF;
+    background-color: #fff;
 
 }
+@media screen and (max-width: 768px) {
+    .menu {
+        width: 200px; /* 在小屏幕上减小菜单宽度 */
+        right: 5px; /* 减小右边距 */
+        top: 5px; /* 减小上边距 */
+    }
+    .canvas {
+        margin-right: 200px; /* 调整<body>的右边距 */
+    }
+}
+
+
+/* 画布 */
+.canvas {
+    display: flex;
+    justify-content: Center; /* 弹性盒子沿主轴居中排列 */
+    flex-wrap: wrap;  /*弹性盒子挤压时可以换行 */
+    gap: 40px;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    /* margin-right: 260px; */
+}
+
 
  .phone {
     width: 375px;
     height: 812px;
-    margin: 30px auto;
+    margin-top: 16px;
+    margin: 30px 0;
     background-color: #FFF;
     /* background-color: aqua; */
     flex-direction:column; /* 修改主轴方向*/
@@ -28,7 +100,7 @@ body, html {
 .pad {
     width: 860px;
     height: 812px;
-    margin: 30px auto;
+    margin: 30px 0;
     background-color: #FFF;
     flex-direction:column; /* 修改主轴方向*/
     align-items: center;
@@ -47,12 +119,18 @@ body, html {
     display: none; /* 隐藏滚动条 */
   }
 
-.phone-banner-container {
-    position: relative;
-    width: 335px; /*横幅的最大宽度 */
-    height: 192px; /* 背景图像的高度 */
-    margin: 0 auto; /* 添加100px的顶部空白，并水平居中横幅 */
+.phone .top img{
+    display: block;
+    margin: 0 auto;
+    width: 375px;
 }
+.pad .top img{
+    display: block;
+    margin: 0 auto;
+    width: 860px;
+}
+
+
 /* 科目 */
 .phone .subject {
     display: flex; /* 启用Flexbox布局 */
@@ -70,7 +148,8 @@ body, html {
     align-items: center;    /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
     padding: 0 16px;   /* 左右内边距为 16px */
     width: 780px;
-    gap: 11px;
+    margin: 0 auto;
+    gap: 20px;
 }
 
 .phone .km { 
@@ -79,30 +158,40 @@ body, html {
     flex-direction: column;  
     justify-content: center;
     align-items: center;
+    gap: 2px;
     width: 58.2px; /* 设置每个.km元素的宽度为100px */
-    gap: 0.0625rem;
-    flex-shrink: 0;
-    padding: 0rem 0.125rem 0rem 0.25rem;
-    border-radius: 0.375rem 0.375rem 0.75rem 0.375rem;
+    height: 52px;
+    border-radius: 12px 12px 24px 12px;
+    margin-top: 16px;
     }
+.phone .km img {
+    width: 32px;
+}
 .pad .km { 
     display: flex;
-    flex: 1;
-    padding: 0.125rem 0rem var(--, 0.25rem) 0rem;
+    padding: 10px 0px;
     justify-content: center;
     align-items: center;
-    width: 58.2px; /* 设置每个.km元素的宽度为100px */
-    gap: 0.0625rem;
-    flex-shrink: 0;
+    gap: 8px;
+    flex: 1 0 0;
+    /* width: 140px;  */
+    flex: 1 0 0; /* 弹性项目可以根据需要增长，占据所有额外的空间*/
+    height: 60px;
     padding: 0rem 0.125rem 0rem 0.25rem;
-    border-radius: 0.375rem 0.375rem 0.75rem 0.375rem;
+    border-radius: 15px 15px 30px 15px;
     }
 
-.km span {
+.phone .km span {
     font-size: 12px;
     width: 1.82rem;
     height: 1rem;
     border-radius: 0.38rem 0.38rem 0.75rem 0.38rem;
+}
+.pad .km span {
+    font-size: 20px;
+}
+.pad .km img {
+    width: 40px;
 }
 .s1 {
     padding: 0.13rem 0 0.34rem;
@@ -130,7 +219,13 @@ body, html {
     box-shadow: 0rem -0.083rem 0.167rem #ffe5eb inset;
 }
 /* banner */
-.pad-banner-container {
+.phone .bigBanner {
+    position: relative;
+    width: 335px; /*横幅的最大宽度 */
+    height: 192px; /* 背景图像的高度 */
+    margin: 0 auto; /* 添加100px的顶部空白，并水平居中横幅 */
+}
+.pad .bigBanner {
     position: relative;
 
     width: 780px; /*横幅的最大宽度 */
@@ -203,14 +298,43 @@ body, html {
 
 .phone .other img{
     display: block;
-    margin: 0 auto;
+    margin: 24px auto;
     width: 335px;
-
 }
 
 .pad .other img {
     display: block;
     margin: 0 auto;
     width: 780px;
+
+}
+
+
+
+.menu .title {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%; 
+    width: 100%;
+    height: 60px;
+    border-bottom: 1px solid #F5F4F4;
+}
+
+.resources{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+
+}
+
+.list {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 
 }
