--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,9 @@ body, html {
 }
 
 .menu {
-    /* position: fixed;  */
-    /* right: 0;
-    top: 0;  */
+    position: fixed; 
+    right: 0;
+    top: 0; 
     display: flex;
     width: 260px;
     height: 100%;
@@ -79,7 +79,8 @@ body, html {
     align-items: center;
     width: 100%;
     height: 100%;
-    /* margin-right: 260px; */
+    margin-right: 260px;
+    
 }
 
 
@@ -92,7 +93,8 @@ body, html {
     /* background-color: aqua; */
     flex-direction:column; /* 修改主轴方向*/
     overflow-x: hidden; /* 隐藏水平滚动条并阻止水平滚动 */
-    overflow-y: auto; /* 允许内容在垂直方向上滚动 */
+    /* 允许内容在垂直方向上滚动 */
+    /* overflow-y: auto;  */
     border-radius: 20px;
     box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
 }
@@ -105,7 +107,8 @@ body, html {
     flex-direction:column; /* 修改主轴方向*/
     align-items: center;
     overflow-x: hidden; /* 隐藏水平滚动条并阻止水平滚动 */
-    overflow-y: auto; /* 允许内容在垂直方向上滚动 */
+     /* 允许内容在垂直方向上滚动 */
+     /* overflow-y: auto; */
     border-radius: 20px;
     box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
 
