--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden;
+    /* Prevent horizontal scrolling */
 }
+
 .page {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     height: 100%;
 }
 
-.nav{
+.nav {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -27,7 +30,7 @@ body, html {
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    line-height: 150%; 
+    line-height: 150%;
     width: 100%;
     height: 60px;
     border-bottom: 1px solid #F5F4F4;
@@ -41,9 +44,9 @@ body, html {
 }
 
 .menu {
-    position: fixed; 
+    position: fixed;
     right: 0;
-    top: 0; 
+    top: 0;
     display: flex;
     width: 260px;
     height: 100%;
@@ -53,19 +56,25 @@ body, html {
     gap: 16px;
     flex-shrink: 0;
     align-self: stretch;
-    border-top: 1px solid  #E0DFDF;
+    border-top: 1px solid #E0DFDF;
     border-left: 1px solid #E0DFDF;
     background-color: #fff;
 
 }
+
 @media screen and (max-width: 768px) {
     .menu {
-        width: 200px; /* 在小屏幕上减小菜单宽度 */
-        right: 5px; /* 减小右边距 */
-        top: 5px; /* 减小上边距 */
+        width: 200px;
+        /* 在小屏幕上减小菜单宽度 */
+        right: 5px;
+        /* 减小右边距 */
+        top: 5px;
+        /* 减小上边距 */
     }
+
     .canvas {
-        margin-right: 200px; /* 调整<body>的右边距 */
+        margin-right: 200px;
+        /* 调整<body>的右边距 */
     }
 }
 
@@ -73,8 +82,10 @@ body, html {
 /* 画布 */
 .canvas {
     display: flex;
-    justify-content: Center; /* 弹性盒子沿主轴居中排列 */
-    flex-wrap: wrap;  /*弹性盒子挤压时可以换行 */
+    justify-content: Center;
+    /* 弹性盒子沿主轴居中排列 */
+    flex-wrap: wrap;
+    /*弹性盒子挤压时可以换行 */
     gap: 40px;
     align-items: center;
     width: 100%;
@@ -83,15 +94,17 @@ body, html {
 }
 
 
- .phone {
+.phone {
     width: 375px;
     height: 812px;
     margin-top: 16px;
     margin: 30px 0;
     background-color: #FFF;
     /* background-color: aqua; */
-    flex-direction:column; /* 修改主轴方向*/
-    overflow-x: hidden; /* 隐藏水平滚动条并阻止水平滚动 */
+    flex-direction: column;
+    /* 修改主轴方向*/
+    overflow-x: hidden;
+    /* 隐藏水平滚动条并阻止水平滚动 */
     /* 允许内容在垂直方向上滚动 */
     /* overflow-y: auto;  */
     border-radius: 20px;
@@ -103,30 +116,35 @@ body, html {
     height: 812px;
     margin: 30px 0;
     background-color: #FFF;
-    flex-direction:column; /* 修改主轴方向*/
+    flex-direction: column;
+    /* 修改主轴方向*/
     align-items: center;
-    overflow-x: hidden; /* 隐藏水平滚动条并阻止水平滚动 */
-     /* 允许内容在垂直方向上滚动 */
-     /* overflow-y: auto; */
+    overflow-x: hidden;
+    /* 隐藏水平滚动条并阻止水平滚动 */
+    /* 允许内容在垂直方向上滚动 */
+    /* overflow-y: auto; */
     border-radius: 20px;
     box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
 
 }
 
 .phone::-webkit-scrollbar {
-    display: none; /* 隐藏滚动条 */
-  }
+    display: none;
+    /* 隐藏滚动条 */
+}
 
-  .pad::-webkit-scrollbar {
-    display: none; /* 隐藏滚动条 */
-  }
+.pad::-webkit-scrollbar {
+    display: none;
+    /* 隐藏滚动条 */
+}
 
-.phone .top img{
+.phone .top img {
     display: block;
     margin: 0 auto;
     width: 375px;
 }
-.pad .top img{
+
+.pad .top img {
     display: block;
     margin: 0 auto;
     width: 860px;
@@ -135,41 +153,55 @@ body, html {
 
 /* 科目 */
 .phone .subject {
-    display: flex; /* 启用Flexbox布局 */
-    justify-content: space-between; /* 子元素之间的空间平均分布 */
-    padding: 0 16px;   /* 左右内边距为 16px */
-    justify-content: center; /* 水平居中子元素 */
-    align-items: center;    /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
+    display: flex;
+    /* 启用Flexbox布局 */
+    justify-content: space-between;
+    /* 子元素之间的空间平均分布 */
+    padding: 0 16px;
+    /* 左右内边距为 16px */
+    justify-content: center;
+    /* 水平居中子元素 */
+    align-items: center;
+    /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
     width: 335px;
     gap: 11px;
 }
+
 .pad .subject {
-    display: flex; /* 启用Flexbox布局 */
-    justify-content: space-between; /* 子元素之间的空间平均分布 */
-    justify-content: center; /* 水平居中子元素 */
-    align-items: center;    /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
-    padding: 0 16px;   /* 左右内边距为 16px */
+    display: flex;
+    /* 启用Flexbox布局 */
+    justify-content: space-between;
+    /* 子元素之间的空间平均分布 */
+    justify-content: center;
+    /* 水平居中子元素 */
+    align-items: center;
+    /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
+    padding: 0 16px;
+    /* 左右内边距为 16px */
     width: 780px;
     margin: 0 auto;
     gap: 20px;
 }
 
-.phone .km { 
+.phone .km {
     display: flex;
     padding: 0.125rem 0rem var(--, 0.25rem) 0rem;
-    flex-direction: column;  
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 2px;
-    width: 58.2px; /* 设置每个.km元素的宽度为100px */
+    width: 58.2px;
+    /* 设置每个.km元素的宽度为100px */
     height: 52px;
     border-radius: 12px 12px 24px 12px;
     margin-top: 16px;
-    }
+}
+
 .phone .km img {
     width: 32px;
 }
-.pad .km { 
+
+.pad .km {
     display: flex;
     padding: 10px 0px;
     justify-content: center;
@@ -177,11 +209,12 @@ body, html {
     gap: 8px;
     flex: 1 0 0;
     /* width: 140px;  */
-    flex: 1 0 0; /* 弹性项目可以根据需要增长，占据所有额外的空间*/
+    flex: 1 0 0;
+    /* 弹性项目可以根据需要增长，占据所有额外的空间*/
     height: 60px;
     padding: 0rem 0.125rem 0rem 0.25rem;
     border-radius: 15px 15px 30px 15px;
-    }
+}
 
 .phone .km span {
     font-size: 12px;
@@ -189,116 +222,161 @@ body, html {
     height: 1rem;
     border-radius: 0.38rem 0.38rem 0.75rem 0.38rem;
 }
+
 .pad .km span {
     font-size: 20px;
 }
+
 .pad .km img {
     width: 40px;
 }
+
 .s1 {
     padding: 0.13rem 0 0.34rem;
     background-color: #fff2ea;
     box-shadow: 0rem -0.062rem 0.125rem #ffede0 inset;
 }
+
 .s2 {
     padding: 0.13rem 0 0.34rem;
     background: rgba(234, 249, 255, 1);
     box-shadow: 0rem -0.083rem 0.167rem rgba(224, 246, 255, 1) inset;
 }
+
 .s3 {
     padding: 0.13rem 0 0.34rem;
     background: rgba(249, 245, 255, 1);
     box-shadow: 0rem -0.083rem 0.167rem rgba(243, 235, 255, 1) inset;
 }
+
 .s4 {
     padding: 0.13rem 0 0.34rem;
     background: rgba(238, 252, 235, 1);
     box-shadow: 0rem -0.083rem 0.167rem rgba(229, 250, 224, 1) inset;
 }
+
 .s5 {
     padding: 0.13rem 0 0.34rem;
     background: #fff0f3;
     box-shadow: 0rem -0.083rem 0.167rem #ffe5eb inset;
 }
+
 /* banner */
 .phone .bigBanner {
     position: relative;
-    width: 335px; /*横幅的最大宽度 */
-    height: 192px; /* 背景图像的高度 */
-    margin: 0 auto; /* 添加100px的顶部空白，并水平居中横幅 */
+    width: 335px;
+    /*横幅的最大宽度 */
+    height: 192px;
+    /* 背景图像的高度 */
+    margin: 0 auto;
+    /* 添加100px的顶部空白，并水平居中横幅 */
 }
+
 .pad .bigBanner {
     position: relative;
 
-    width: 780px; /*横幅的最大宽度 */
-    height: 240px; /* 背景图像的高度 */
-    margin: 0px auto 0; /* 添加100px的顶部空白，并水平居中横幅 */
+    width: 780px;
+    /*横幅的最大宽度 */
+    height: 240px;
+    /* 背景图像的高度 */
+    margin: 0px auto 0;
+    /* 添加100px的顶部空白，并水平居中横幅 */
 }
 
 .pad-background-image {
     position: absolute;
-    width: 100%; /* 将背景图像的宽度设置为容器的100% */
-    height: 215px; /* Height of the background image */
-    bottom: 0; /* 对齐图像的底部 */
-    left: 50%; /* 将图像水平居中 */
-    transform: translateX(-50%); /* 调整位置，使位置完全居中 */
-    border-radius: 26.97px; /* 在背景图像中添加20px圆角 */
-    object-fit: cover; /* 确保图像覆盖区域而不拉伸*/
-}  
+    width: 100%;
+    /* 将背景图像的宽度设置为容器的100% */
+    height: 215px;
+    /* Height of the background image */
+    bottom: 0;
+    /* 对齐图像的底部 */
+    left: 50%;
+    /* 将图像水平居中 */
+    transform: translateX(-50%);
+    /* 调整位置，使位置完全居中 */
+    border-radius: 26.97px;
+    /* 在背景图像中添加20px圆角 */
+    object-fit: cover;
+    /* 确保图像覆盖区域而不拉伸*/
+}
+
 .pad-foreground-image {
     position: absolute;
     height: 240px;
-    width: 100%; /* 将前景图像的宽度设置为容器的100% */
-    bottom: 0px; /* 将前景图像放置在背景图像上方40px */
-    left: 50%; /* 将图像水平居中 */
-    transform: translateX(-50%); /* 调整位置，使位置完全居中 */
-    object-fit: cover; /* 确保图像覆盖区域而不拉伸 */
+    width: 100%;
+    /* 将前景图像的宽度设置为容器的100% */
+    bottom: 0px;
+    /* 将前景图像放置在背景图像上方40px */
+    left: 50%;
+    /* 将图像水平居中 */
+    transform: translateX(-50%);
+    /* 调整位置，使位置完全居中 */
+    object-fit: cover;
+    /* 确保图像覆盖区域而不拉伸 */
 }
 
 .phone-background-image {
     position: absolute;
-    width: 100%; /* 将背景图像的宽度设置为容器的100% */
-    height: 172px; /* Height of the background image */
-    bottom: 0; /* 对齐图像的底部 */
-    left: 50%; /* 将图像水平居中 */
-    transform: translateX(-50%); /* 调整位置，使位置完全居中 */
-    border-radius: 16px; /* 在背景图像中添加20px圆角 */
-    object-fit: cover; /* 确保图像覆盖区域而不拉伸*/
-}  
+    width: 100%;
+    /* 将背景图像的宽度设置为容器的100% */
+    height: 172px;
+    /* Height of the background image */
+    bottom: 0;
+    /* 对齐图像的底部 */
+    left: 50%;
+    /* 将图像水平居中 */
+    transform: translateX(-50%);
+    /* 调整位置，使位置完全居中 */
+    border-radius: 16px;
+    /* 在背景图像中添加20px圆角 */
+    object-fit: cover;
+    /* 确保图像覆盖区域而不拉伸*/
+}
+
 .phone-foreground-image {
     position: absolute;
     height: 192px;
-    width: 100%; /* 将前景图像的宽度设置为容器的100% */
-    bottom: 0px; /* 将前景图像放置在背景图像上方40px */
-    left: 50%; /* 将图像水平居中 */
-    transform: translateX(-50%); /* 调整位置，使位置完全居中 */
-    object-fit: cover; /* 确保图像覆盖区域而不拉伸 */
+    width: 100%;
+    /* 将前景图像的宽度设置为容器的100% */
+    bottom: 0px;
+    /* 将前景图像放置在背景图像上方40px */
+    left: 50%;
+    /* 将图像水平居中 */
+    transform: translateX(-50%);
+    /* 调整位置，使位置完全居中 */
+    object-fit: cover;
+    /* 确保图像覆盖区域而不拉伸 */
 }
 
 
 .phone .miniBanner {
-    display: flex; /* 启用Flexbox布局 */
+    display: flex;
+    /* 启用Flexbox布局 */
     margin-top: 1rem;
-    padding-left: 16px;   /* 左内边距为 16px */
+    padding-left: 16px;
+    /* 左内边距为 16px */
     gap: 8px;
 }
 
-.phone .miniBanner img  {
+.phone .miniBanner img {
     width: 162px;
     height: 91px;
 }
+
 .pad .miniBanner {
-    display: flex; /* 启用Flexbox布局 */
+    display: flex;
+    /* 启用Flexbox布局 */
     width: 780px;
     gap: 12px;
-    margin: 20px  40px 0px 40px;
+    margin: 20px 40px 0px 40px;
 }
 
-.pad .miniBanner img  {
+.pad .miniBanner img {
     width: 243px;
 }
 
-.phone .other img{
+.phone .other img {
     display: block;
     margin: 24px auto;
     width: 335px;
@@ -319,13 +397,13 @@ body, html {
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    line-height: 150%; 
+    line-height: 150%;
     width: 100%;
     height: 60px;
     border-bottom: 1px solid #F5F4F4;
 }
 
-.resources{
+.resources {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -334,9 +412,15 @@ body, html {
 }
 
 .list {
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
 
+}
+
+.zyname a {
+    margin: 4px;
+    vertical-align: middle;
+    /* 居中对齐 */
 }
