--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,10 @@ html {
     padding: 0;
     height: 100%;
     overflow-x: hidden;
-    /* Prevent horizontal scrolling */
+    /* 防止水平滚动*/
+
 }
+
 
 .page {
     display: flex;
@@ -13,108 +15,66 @@ html {
     height: 100%;
 }
 
-.nav {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    width: 260px;
-    height: 100%;
-    background-color: #fff;
-    border-right: 1px solid #E0DFDF;
-    padding: 0 20px;
-}
-
-.nav .heading {
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%;
-    width: 100%;
-    height: 60px;
-    border-bottom: 1px solid #F5F4F4;
-}
-
-.nav .content {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 100%;
-}
 
 .menu {
     position: fixed;
     right: 0;
     top: 0;
     display: flex;
-    width: 260px;
+    width: 16rem;
     height: 100%;
-    padding: 0 20px;
+    padding: 0 1rem;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
+    gap: 1rem;
     flex-shrink: 0;
     align-self: stretch;
-    border-top: 1px solid #E0DFDF;
-    border-left: 1px solid #E0DFDF;
+    border-top: 0.0625rem solid #E0DFDF;
+    border-left: 0.0625rem solid #E0DFDF;
     background-color: #fff;
 
 }
 
-@media screen and (max-width: 768px) {
-    .menu {
-        width: 200px;
-        /* 在小屏幕上减小菜单宽度 */
-        right: 5px;
-        /* 减小右边距 */
-        top: 5px;
-        /* 减小上边距 */
-    }
-
-    .canvas {
-        margin-right: 200px;
-        /* 调整<body>的右边距 */
-    }
-}
 
 
 /* 画布 */
 .canvas {
     display: flex;
     justify-content: Center;
+    align-items: center;
     /* 弹性盒子沿主轴居中排列 */
     flex-wrap: wrap;
     /*弹性盒子挤压时可以换行 */
-    gap: 40px;
-    align-items: center;
+    gap: 2.5rem;
+    /* align-items: center; */
     width: 100%;
     height: 100%;
-    margin-right: 260px;
+    margin-right: 17rem;
+
 }
 
 
 .phone {
-    width: 375px;
-    height: 812px;
-    margin-top: 16px;
-    margin: 30px 0;
+    width: 23.4375rem;
+    height: 50.75rem;
+    margin-top: 1rem;
+    margin: 1.875rem 0;
     background-color: #FFF;
-    /* background-color: aqua; */
+
     flex-direction: column;
     /* 修改主轴方向*/
     overflow-x: hidden;
     /* 隐藏水平滚动条并阻止水平滚动 */
     /* 允许内容在垂直方向上滚动 */
     /* overflow-y: auto;  */
-    border-radius: 20px;
-    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
+    border-radius: 1.25rem;
+    box-shadow: 0rem 0.25rem 3.125rem 0rem rgba(0, 0, 0, 0.08);
 }
 
 .pad {
-    width: 860px;
-    height: 812px;
-    margin: 30px 0;
+    width: 53.75rem;
+    height: 50.75rem;
+    margin: 1.875rem 0;
     background-color: #FFF;
     flex-direction: column;
     /* 修改主轴方向*/
@@ -123,8 +83,8 @@ html {
     /* 隐藏水平滚动条并阻止水平滚动 */
     /* 允许内容在垂直方向上滚动 */
     /* overflow-y: auto; */
-    border-radius: 20px;
-    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
+    border-radius: 1.25rem;
+    box-shadow: 0rem 0.25rem 3.125rem 0rem rgba(0, 0, 0, 0.08);
 
 }
 
@@ -141,13 +101,13 @@ html {
 .phone .top img {
     display: block;
     margin: 0 auto;
-    width: 375px;
+    width: 23.4375rem;
 }
 
 .pad .top img {
     display: block;
     margin: 0 auto;
-    width: 860px;
+    width: 53.75rem;
 }
 
 
@@ -157,14 +117,14 @@ html {
     /* 启用Flexbox布局 */
     justify-content: space-between;
     /* 子元素之间的空间平均分布 */
-    padding: 0 16px;
-    /* 左右内边距为 16px */
+    padding: 0 1rem;
+    /* 左右内边距为 1rem */
     justify-content: center;
     /* 水平居中子元素 */
     align-items: center;
     /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
-    width: 335px;
-    gap: 11px;
+    width: 20.9375rem;
+    gap: 0.6875rem;
 }
 
 .pad .subject {
@@ -176,11 +136,11 @@ html {
     /* 水平居中子元素 */
     align-items: center;
     /* 垂直居中子元素，如果已经是居中的话，这一行可以省略 */
-    padding: 0 16px;
-    /* 左右内边距为 16px */
-    width: 780px;
+    padding: 0 1rem;
+    /* 左右内边距为 1rem */
+    width: 48.75rem;
     margin: 0 auto;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .phone .km {
@@ -189,46 +149,46 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2px;
-    width: 58.2px;
-    /* 设置每个.km元素的宽度为100px */
-    height: 52px;
-    border-radius: 12px 12px 24px 12px;
-    margin-top: 16px;
+    gap: 0.125rem;
+    width: 3.6375rem;
+    /* 设置每个.km元素的宽度为6.25rem */
+    height: 3.25rem;
+    border-radius: 0.75rem 0.75rem 1.5rem 0.75rem;
+    margin-top: 1rem;
 }
 
 .phone .km img {
-    width: 32px;
+    width: 2rem;
 }
 
 .pad .km {
     display: flex;
-    padding: 10px 0px;
+    padding: 0.625rem 0rem;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 0.5rem;
     flex: 1 0 0;
-    /* width: 140px;  */
+    /* width: 8.75rem;  */
     flex: 1 0 0;
     /* 弹性项目可以根据需要增长，占据所有额外的空间*/
-    height: 60px;
+    height: 3.75rem;
     padding: 0rem 0.125rem 0rem 0.25rem;
-    border-radius: 15px 15px 30px 15px;
+    border-radius: 0.9375rem 0.9375rem 1.875rem 0.9375rem;
 }
 
 .phone .km span {
-    font-size: 12px;
+    font-size: 0.75rem;
     width: 1.82rem;
     height: 1rem;
     border-radius: 0.38rem 0.38rem 0.75rem 0.38rem;
 }
 
 .pad .km span {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .pad .km img {
-    width: 40px;
+    width: 2.5rem;
 }
 
 .s1 {
@@ -264,30 +224,30 @@ html {
 /* banner */
 .phone .bigBanner {
     position: relative;
-    width: 335px;
+    width: 20.9375rem;
     /*横幅的最大宽度 */
-    height: 192px;
+    height: 12rem;
     /* 背景图像的高度 */
     margin: 0 auto;
-    /* 添加100px的顶部空白，并水平居中横幅 */
+    /* 添加6.25rem的顶部空白，并水平居中横幅 */
 }
 
 .pad .bigBanner {
     position: relative;
 
-    width: 780px;
+    width: 48.75rem;
     /*横幅的最大宽度 */
-    height: 240px;
+    height: 15rem;
     /* 背景图像的高度 */
-    margin: 0px auto 0;
-    /* 添加100px的顶部空白，并水平居中横幅 */
+    margin: 0rem auto 0;
+    /* 添加6.25rem的顶部空白，并水平居中横幅 */
 }
 
-.pad-background-image {
+.pad .background-image {
     position: absolute;
     width: 100%;
     /* 将背景图像的宽度设置为容器的100% */
-    height: 215px;
+    height: 13.4375rem;
     /* Height of the background image */
     bottom: 0;
     /* 对齐图像的底部 */
@@ -295,19 +255,19 @@ html {
     /* 将图像水平居中 */
     transform: translateX(-50%);
     /* 调整位置，使位置完全居中 */
-    border-radius: 26.97px;
-    /* 在背景图像中添加20px圆角 */
+    border-radius: 1.6856rem;
+    /* 在背景图像中添加1.25rem圆角 */
     object-fit: cover;
     /* 确保图像覆盖区域而不拉伸*/
 }
 
-.pad-foreground-image {
+.pad .foreground-image {
     position: absolute;
-    height: 240px;
+    height: 15rem;
     width: 100%;
     /* 将前景图像的宽度设置为容器的100% */
-    bottom: 0px;
-    /* 将前景图像放置在背景图像上方40px */
+    bottom: 0rem;
+    /* 将前景图像放置在背景图像上方2.5rem */
     left: 50%;
     /* 将图像水平居中 */
     transform: translateX(-50%);
@@ -316,11 +276,11 @@ html {
     /* 确保图像覆盖区域而不拉伸 */
 }
 
-.phone-background-image {
+.phone .background-image {
     position: absolute;
     width: 100%;
     /* 将背景图像的宽度设置为容器的100% */
-    height: 172px;
+    height: 10.75rem;
     /* Height of the background image */
     bottom: 0;
     /* 对齐图像的底部 */
@@ -328,19 +288,19 @@ html {
     /* 将图像水平居中 */
     transform: translateX(-50%);
     /* 调整位置，使位置完全居中 */
-    border-radius: 16px;
-    /* 在背景图像中添加20px圆角 */
+    border-radius: 1rem;
+    /* 在背景图像中添加1.25rem圆角 */
     object-fit: cover;
     /* 确保图像覆盖区域而不拉伸*/
 }
 
-.phone-foreground-image {
+.phone .foreground-image {
     position: absolute;
-    height: 192px;
+    height: 12rem;
     width: 100%;
     /* 将前景图像的宽度设置为容器的100% */
-    bottom: 0px;
-    /* 将前景图像放置在背景图像上方40px */
+    bottom: 0rem;
+    /* 将前景图像放置在背景图像上方2.5rem */
     left: 50%;
     /* 将图像水平居中 */
     transform: translateX(-50%);
@@ -354,38 +314,38 @@ html {
     display: flex;
     /* 启用Flexbox布局 */
     margin-top: 1rem;
-    padding-left: 16px;
-    /* 左内边距为 16px */
-    gap: 8px;
+    padding-left: 1rem;
+    /* 左内边距为 1rem */
+    gap: 0.5rem;
 }
 
 .phone .miniBanner img {
-    width: 162px;
-    height: 91px;
+    width: 10.125rem;
+    height: 5.6875rem;
 }
 
 .pad .miniBanner {
     display: flex;
     /* 启用Flexbox布局 */
-    width: 780px;
-    gap: 12px;
-    margin: 20px 40px 0px 40px;
+    width: 48.75rem;
+    gap: 0.75rem;
+    margin: 1.25rem 2.5rem 0rem 2.5rem;
 }
 
 .pad .miniBanner img {
-    width: 243px;
+    width: 15.1875rem;
 }
 
 .phone .other img {
     display: block;
-    margin: 24px auto;
-    width: 335px;
+    margin: 1.5rem auto;
+    width: 20.9375rem;
 }
 
 .pad .other img {
     display: block;
     margin: 0 auto;
-    width: 780px;
+    width: 48.75rem;
 
 }
 
@@ -394,19 +354,19 @@ html {
 .menu .title {
     display: flex;
     align-items: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 500;
     line-height: 150%;
     width: 100%;
-    height: 60px;
-    border-bottom: 1px solid #F5F4F4;
+    height: 3.75rem;
+    border-bottom: 0.0625rem solid #F5F4F4;
 }
 
 .resources {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
     width: 100%;
 
 }
@@ -420,7 +380,7 @@ html {
 }
 
 .zyname a {
-    margin: 4px;
+    margin: 0.25rem;
     vertical-align: middle;
     /* 居中对齐 */
 }
