添加我的页面

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ ul ul {
     display: flex;
     justify-content: space-between;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 
