--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,13 @@
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+  /* 防止水平滚动*/
+
+}
+
 html {
   font-size: 12px;
 }
