--- a/css/zylb.css
+++ b/css/zylb.css
@@ -14,14 +14,28 @@
 
 .button_line {
     display: flex;
-    width: 70px;
-    height: 32px;
-    padding: 0px 8px;
+    width: 5.8333rem;
+    height: 2.6667rem;
+    padding: 0rem 0.6667rem;
     justify-content: center;
     align-items: center;
-    gap: 2px;
+    gap: 0.1667rem;
     align-self: stretch;
     border-radius: 0.5rem;
-    border: 1px solid #E0DFDF;
+    border: 0.0833rem solid #E0DFDF;
+    background: #FFF;
+}
+
+.colorInput {
+    display: flex;
+    width: 4.2rem;
+    height: 2.6667rem;
+    padding: 0rem 0.6667rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.1667rem;
+    align-self: stretch;
+    border-radius: 0.5rem;
+    border: 0.0833rem solid #E0DFDF;
     background: #FFF;
 }
