--- a/css/page.css
+++ b/css/page.css
@@ -1,3 +1,13 @@
+.home-icon {
+    cursor: pointer;
+    position: fixed;
+    font-size: 1.5rem;
+    top: 10px;
+    left: 10px;
+    transition: opacity 0.3s;
+}
+
+
 .page {
     background-color: #ffffff;
     width: 100%;
